# pong

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
src/: CMakeLists.txt  datatypes.h  main.cpp  mainwindow.cpp  mainwindow.h  pose_estimator.cpp  pose_estimator.h  scene.cpp  scene.h
tests/: CMakeLists.txt  main.cpp
